--- a/css/down.css
+++ b/css/down.css
@@ -55,7 +55,7 @@ footer span{
 	background-color: white;
 	box-shadow: 1px 1px 2px #aaaaaa;
 	text-align: center;
-	margin: 0px 5px 20px 5px;
+	margin: 0px 2px 20px 2px;
 }
 .common-v .common-model>img{
 	margin-top: 20px;
@@ -68,7 +68,7 @@ footer span{
 	text-align: center;
 }
 .common-v .model-title small{
-	margin-left: 20px;
+	margin-left: -5px;
 	font-size: 12px;
 }
 .common-v ul{
@@ -102,7 +102,7 @@ footer span{
 .common-v .perv-model{
 	height: 50px;
 	line-height: 50px;
-	font-size: 16px;
+	font-size: 14px;
 	border-top: 1px solid #D4D0D0;
 	padding-left: 10px;
 	padding-right: 10px;
@@ -117,12 +117,13 @@ footer span{
 	float: left;
 }
 .common-v .perv-model a{
-	width: 50px;
-	height: 30px;
-	line-height: 30px;
+	font-size: 12px;
+	width: 40px;
+	height: 20px;
+	line-height: 20px;
 	border-radius: 3px;
 	float: right;
-	margin-top: 10px;
+	margin-top: 15px;
 }
 .bg1{
 	background-color: #c0a7de;
@@ -158,46 +159,45 @@ footer span{
 	display: inline-block;
 }
 .other-v .other-model{
-	font-size: 16px;
+	font-size: 14px;
 	border-radius: 2px;
 	background-color: white;
 	box-shadow: 1px 1px 2px #aaaaaa;
 	text-align: center;
 	float: left;
-	margin: 0 5px 20px 0;
+	margin: 0 2px 14px 2px;
+	line-height: 42px;
 }
 .border-left1{
-	border-left: 5px solid #c0a7de;
+	border-left: 3px solid #c0a7de;
 }
 .border-left2{
-	border-left: 5px solid #f8c36f;
+	border-left: 3px solid #f8c36f;
 }
 .border-left3{
-	border-left: 5px solid #92b3dd;
+	border-left: 3px solid #92b3dd;
 }
 .border-left4{
-	border-left: 5px solid #81d3d2;
+	border-left: 3px solid #81d3d2;
 }
 .other-v .other-model span{
 	float: left;
-	line-height: 65px;
 	margin-left: 10px;
 }
 .other-v .other-model small{
-	margin-left: 10px;
-	margin-right: 10px;
+	margin-left: 5px;
+	margin-right: 5px;
 	color: gray;
 	font-size: 12px;
 	float: left;
-	line-height: 65px;
 }
 .other-v .other-model a{
-	width: 50px;
-	height: 30px;
-	line-height: 30px;
+	width: 40px;
+	height: 20px;
+	line-height: 20px;
 	border-radius: 3px;
 	float: right;
-	margin-top: 17px;
+	margin-top: 12px;
 	margin-right: 10px;
 }
 /* 图标类 */
@@ -208,28 +208,28 @@ footer span{
 	display: inline-block;
 }
 .syaz-svg{
-	background-image: url(images/syaz.svg);
+	background-image: url(../images/syaz.svg);
 }
 .dyfw-svg{
-	background-image: url(images/dyfw.svg);
+	background-image: url(../images/dyfw.svg);
 }
 .pdydIOS-svg{
-	background-image: url(images/pdydIOS.svg);
+	background-image: url(../images/pdydIOS.svg);
 }
 .pdydtw-svg{
-	background-image: url(images/pdydtw.svg);
+	background-image: url(../images/pdydtw.svg);
 }
 .zzzc-svg{
-	background-image: url(images/zzzc.svg);
+	background-image: url(../images/zzzc.svg);
 }
 .zzkc-svg{
-	background-image: url(images/zzkc.svg);
+	background-image: url(../images/zzkc.svg);
 }
 .mobileiOS-svg{
-	background-image: url(images/mobileiOS.svg);
+	background-image: url(../images/mobileiOS.svg);
 }
 .ypdaz-svg{
-	background-image: url(images/ypdaz.svg);
+	background-image: url(../images/ypdaz.svg);
 }
 
 
@@ -244,7 +244,7 @@ header,footer{
 	margin: 0 auto;
 }
 .common-model{
-	width: 24%;
+	width: 24.6%;
 }
 .other-model{
 	width: 49%
@@ -261,10 +261,10 @@ header,footer{
 	margin: 0 auto;
 }
 .common-model{
-	width: 48%;
+	width: 49%;
 }
 .other-model{
-	width: 48%
+	width: 48.5%
 }
 }
 
